--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,19 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin: 32px 0;
+}
+
+.cards {
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+}
+
+.card {
+  text-align: center;
+  width: 200px; 
 }
 
 /* do not edit this footer */
